--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -11,16 +11,16 @@ on:
 jobs:
   scanning:
     env:
-      APP_ID: 3622f2ccdb9e84bdd9d9af4785728b96df5baa1a00c34f8f32948dea232d459e
+      APP_ID: 294b8ca446ab369664ad56c32da7670a03ee10e07f5c9fdbd7efe6aaa2f9c422
       BRANCH_NAME: develop
-      SCAN_ID: ded52204fb8528a1a22283d7a4585c45f527730ef9b12c69507e9837686244e8
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://2ea0-103-58-66-150.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://24dd-103-58-66-150.ngrok.io/resultparserapi\"\
+      SCAN_ID: 3024e930bf17fe25c10ad4b8df0bdba3fa9eb6db44f15b563a786a57e23e8ef0
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://slresultapi.uat.securin.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.uat.securin.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://2ea0-103-58-66-150.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.uat.securin.io/resultapi/aws/ecr/token'\
         \  --header 'X-ASPM-Auth-Key: ${{secrets.ORG_API_KEY}}'  --data-raw ' ' )\
         \ \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
